Almost finished Battleship game. I have problem with Reset button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <!-- player 1 -->
       <div class ="player">
-        <h3> player 1 </h3>
+        <h3> Player 1 </h3>
         <div class = "player_information">
           <Label><b>Name:</b> <p id = "name_player1"></p></Label>  <!-- insert name of the player1  -->
           <Label>lives: <p id = "ships_player1"></p></Label> <!-- insert ships of the player1  -->
@@ -31,13 +31,13 @@
       
       <!-- turn player -->
       <div>
-        <label>turn: <h3 id="turn_player"></h3><label> <!-- insert name of the turn player -->
+        <label>Your turn: <h3 id="turn_player"></h3><label> <!-- insert name of the turn player -->
         <div id="buttons"></div> <!-- reset and newGame buttons -->
       </div>
 
       <!-- player 2 -->
       <div class="player">
-        <h3> player 2 </h3>
+        <h3> Player 2 </h3>
         <div class = "player_information">
           <Label><b>Name: </b><p id = "name_player2"></p></Label><!-- insert name of the player2  -->
           <Label>lives: <p id = "ships_player2"></p></Label><!-- insert ships of the player2  -->
